# LLVMSharp

./: .gitignore  .travis.yml  Assembly.cs  CMakeLists.txt  Common.cs  Context.cs  ConversionUtilities.cs  Conversions.cs  DiagnosticInfo.cs  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  DisasmContext.cs  ErrorUtilities.cs  ExecutionEngine.cs  GenLLVMDLL.ps1  Generated.Custom.cs  Generated.cs  GenericValue.cs  IDisposableWrapper.cs  IHandle.cs  IRBuilder.cs  IWrapper.cs  LICENSE.txt  LLVMBasicBlockRef.cs  LLVMBool.cs  LLVMBuilderRef.cs  LLVMContext.cs  LLVMContextRef.cs  LLVMDiagnosticInfoRef.cs  LLVMDisasmContextRef.cs  LLVMExecutionEngineRef.cs  LLVMGenericValueRef.cs  LLVMMCJITMemoryManagerRef.cs  LLVMMemoryBufferRef.cs  LLVMModuleProviderRef.cs  LLVMModuleRef.cs  LLVMObjectFileRef.cs  LLVMPassManagerBuilderRef.cs  LLVMPassManagerRef.cs  (+44 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
Api/: Context.cs  DiagnosticInfo.cs  ExecutionEngine.cs  FatalErrorHandler.cs  GenericValue.cs  Initialize.cs  Interpreter.cs  MemoryBuffer.cs  ObjectFile.cs  PassManager.cs  PassManagerBuilder.cs  Support.cs  SymbolIterator.cs  Target.cs  TargetMachine.cs  Threading.cs  Use.cs
ClangSharpPInvokeGenerator/: ClangSharpPInvokeGenerator.csproj  Extensions.cs  Generated.cs  Program.cs
Instructions/: BinaryOperator.cs  ExtractElementInst.cs  FenceInst.cs  InsertElementInst.cs  Instruction.cs  LandingPadInst.cs  PHINode.cs
Tests/: Bindings.cs  Contexts.cs  Delegates.cs  Examples.cs  IR.cs  LLVMSharp.Tests.csproj  Module.cs  Modules.cs  Targets.cs  Tests.csproj  Types.cs  Utilities.cs  packages.config
Types/: FunctionType.cs  IntegerType.cs
UnitTests/: Common.cs  ConversionTests.cs  IRBuilder.cs  OOAPITests.cs  OOPAPITests.cs  Targets.cs  UnitTests.csproj
Utilities/: IWrapper.cs
Values/: Argument.cs  BasicBlock.cs  Constant.cs  Instruction.cs  Value.cs
bindings_support/: IRBindings.cpp  IRBindings.h  LLVMSharp.cpp  (+4 more)
sources/libLLVMSharp/: CMakeLists.txt  LLVMSharp.cpp  LLVMSharp.h
(+1514 files in other folders)
